MD Settings: add more extension controlled pref handling.

This previously existing code was removed earlier, but turns out to be necessary so adding the code back.

BUG=693226

Review-Url: https://codereview.chromium.org/2720503007
Cr-Commit-Position: refs/heads/master@{#453673}

Former-commit-id: a37a3c270737739b63bca0dc46e7ee2e1d1ebdd4